# Order_service

./: .env  .gitignore  Cargo.toml  README.md
scripts/: create_db.sql  test_get_requests.ps1  test_get_requests.sh
src/: db.rs  handlers.rs  main.rs  model.rs  models.rs  state.rs
tests/: api_tests.rs
