[package]
name = "order_service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6"
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.2", features = ["runtime-tokio-native-tls", "postgres", "bigdecimal", "time"] }
clap = { version = "4.1", optional = true }
tower = "0.5.1"
log = "0.4"
env_logger = "0.11.5"
dotenv = "0.15"
bigdecimal = { version = "0.4.5", features = ["serde"] }
chrono = "0.4.38"
serde_json = "1.0.128"
reqwest = { version = "0.12.7", features = ["json"] }
